--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -30,17 +30,18 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ati-KL-y4A" secondAttribute="trailing" id="7vA-6o-P40"/>
-                            <constraint firstItem="Ati-KL-y4A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NcY-EJ-UTL"/>
+                            <constraint firstItem="Ati-KL-y4A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Qsp-4A-N2X"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ati-KL-y4A" secondAttribute="bottom" id="jmr-wa-YCz"/>
                             <constraint firstItem="Ati-KL-y4A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="t9C-ek-XKU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="9xN-bp-cyz">
+                        <barButtonItem key="backBarButtonItem" title="Cancel" id="BvA-ur-D6e"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ooT-fM-4tU">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <segue destination="oc6-WM-CG6" kind="show" id="4kB-5f-8cD"/>
+                                <action selector="addItem:" destination="BYZ-38-t0r" id="IgD-oz-gTB"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -61,16 +62,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTL-SC-vYZ">
-                                <rect key="frame" x="20" y="84" width="335" height="150"/>
+                                <rect key="frame" x="20" y="40" width="335" height="180"/>
                                 <color key="backgroundColor" red="0.97671295150282422" green="0.89963636512876" blue="0.71722302348394229" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="C95-KS-bQe"/>
+                                    <constraint firstAttribute="height" constant="180" id="C95-KS-bQe"/>
                                 </constraints>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4K-jx-HdY">
-                                <rect key="frame" x="20" y="244" width="335" height="40"/>
+                                <rect key="frame" x="20" y="230" width="335" height="40"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="0pt-e5-sx9"/>
@@ -111,6 +113,7 @@
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.94258779287338257" green="0.6723170620128569" blue="0.27862916649938896" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                             <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
